--- a/solution/index.html
+++ b/solution/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-
   <h2>Our Menu</h2>
   <div class="row">
   <div class="col-lg-4 col-md-6"><div class="box"><span  id="c">Chicken</span><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, voluptatum distinctio ullam repellendus vel sed ipsum numquam sint quos molestias dolorem? In corrupti sequi eligendi debitis accusamus ipsa hic distinctio.</p></div></div>
